# agent-in-the-loop-forecasting

./: .env.example  .gitignore  CLAUDE.md  LOCAL_SWAP_GUIDE.md  README.md  SPEC.md  changepoint_spec.md  claude.md  cspell.json  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: CNAME  _config.yml  agent-loop.md  architecture.md  concepts.md  getting-started.md  index.md  limitations.md  roadmap.md
docs/decisions/: 0001-repo-structure.md
docs/development/: adding-a-pipeline.md  prompts-and-tools.md  setup.md  testing.md
docs/diagrams/: README.md  agent_loop.mmd  architecture.mmd
docs/experiments/: evaluation.md  overview.md  results.md  scenarios.md
docs/pipelines/: anomaly.md  changepoint.md  drift.md  overview.md
figures/: results_mae.tex  results_rmse.tex
pocs/: README.md  generate_and_forecast.py  prophet_forecast_yr5.py  qwen_changepoints.py  visualize_drift.py
pocs/anomaly/: pipeline_results.json  poc_visualization.py
pocs/changepoint/: __init__.py  baselines.py  changepoint_agent_poc.py  config.py  detector.py  diagnostics.py  export_scenario_csvs.py  forecasting.py  interventions.py  llm.py  reporting.py  results.py  run_poc.py  scenarios.py  viz.py
pocs/data/: sec10_sine_yr3_seasonal_full.csv  sec10_sine_yr3_seasonal_train.csv  sec11_A_exponential_concept_full.csv  sec11_A_exponential_concept_train.csv  sec11_B_binary_covariate_full.csv  sec11_B_binary_covariate_train.csv  sec11_C_flat_combined_full.csv  sec11_C_flat_combined_train.csv  sec12_covariate_seasonal_full.csv  sec12_covariate_seasonal_train.csv  sec9_i_neg_yr2q3_full.csv  sec9_i_neg_yr2q3_train.csv  sec9_ii_q4up_q1down_full.csv  sec9_ii_q4up_q1down_train.csv  sec9_iii_neg_q2up_full.csv  sec9_iii_neg_q2up_train.csv  sec9_v_snake_covariate_full.csv  sec9_v_snake_covariate_train.csv
pocs/llm_eval/: NOTES.md  README.md  TOPICS.md  inspect_case.py  migrate_curated_to_src.py  stability_check.py  topic1_golden_record.md  topic2_dataset_generation.md  topic3_mvp_pipeline.md
pocs/qwen/: changepoints.csv  changepoints.json
sessions/: README.md
sessions/amuthaval/: 2026-06-16-anomaly-pr-validation.txt
sessions/dinesh1/: base-setup-changepoint-seasonality.md  changepoint-v2.md
sessions/gouthamp/: goutham_initial_exploration.md  gouthamp-llm-eval.md  slope-change-changepoint-dataset-generation-and-naive-prophet-analysis.md
sessions/harish1/: 001-project-foundation.txt  002-drift-dataset-implementation.txt  002-drift-dataset-plan.txt  002-drift-dataset-research.txt  003-changepoint-poc.txt  005-configurable-agent-core.txt  006-ui-polish.txt
sessions/ksowmya/: README.md  SPEC-dataset.md  SPEC-ksowmya.md  architecture-phase1.md  conversation-export.txt  conversation-export6-end-to-end-testing.txt  conversation_export2.txt  conversation_export3.txt  conversation_export4.txt  conversation_export5-ui.txt  export.json  export2.md  visualize_drift.py
sessions/meena/: meena_session_v2.md
sessions/meenac/: meena_project_understanding_export1.md  meena_session_v3.md  meena_session_v4.md
sessions/nadhiyar/: 2026-06-17-anomaly-spec-ci-session.md  2026-06-17-sessions-folder-setup.md
specs/003-changepoint-agent-poc/: plan.md  (+5 more)
tests/: test_figures.py  test_metrics_table.py  test_smoke.py
(+409 files in other folders)
