[project]
name = "ailf"
version = "0.1.0"
description = "Agent-in-the-Loop Forecasting: a bounded LLM agent that diagnoses time-series failure modes, proposes interventions, and validates them via backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts",
    "prophet",
    "langgraph",
    "langchain",
    "anthropic",
    "pandas",
    "numpy",
    "matplotlib",
    "plotly>=6.8.0",
    "kaleido>=1.3.0",
    "langchain-aws>=1.5.1",
    "boto3>=1.43.29",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
