[project]
name = "ailf"
version = "0.1.0"
description = "Agent-in-the-Loop Forecasting: a bounded LLM agent that diagnoses time-series failure modes, proposes interventions, and validates them via backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts",
    "prophet",
    "langgraph",
    "langchain",
    "anthropic",
    "pandas",
    "numpy",
    "matplotlib",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.1",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
