[project]
name = "ailf"
version = "0.1.0"
description = "Agent-in-the-Loop Forecasting: a bounded LLM agent that diagnoses time-series failure modes, proposes interventions, and validates them via backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts",
    "prophet==1.3.0",
    "langgraph",
    "langchain",
    "anthropic",
    "pandas",
    "numpy",
    "matplotlib",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.1",
    "streamlit>=1.35.0",
    "plotly>=6.8.0",
    "kaleido>=1.3.0",
    "langchain-aws>=1.5.1",
    "boto3>=1.43.29",
    "python-dotenv>=1.2.2",
    "ruptures>=1.1.10",
    "langchain-anthropic>=1.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." makes the repo-root `pocs/` importable so the changepoint parity tests can compare the
# promoted core path against the un-promoted POC oracle (SC-001).
pythonpath = ["src", "."]
# Avoid module-name collisions between same-named test files across pipelines
# (e.g. tests/pipelines/{anomaly,drift}/test_datasets.py).
addopts = ["--import-mode=importlib"]
markers = [
    "golden: opt-in agent-quality eval requiring live Bedrock credentials (never gates the deterministic suite)",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
